<resources>
    <string name="app_name">مستشاري الطبي</string>
    <string name="wait">أنتظر قليلاً ..</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="title_home">الأستشارات العامة</string>
    <string name="title_dashboard">أستشاراتي</string>
    <string name="title_notifications">الاستشارات</string>
    <string name="personal">الملف الشخصي</string>
    <string name="errorNetwork">لا يوجد اتصال بالأنترنت</string>
    <string name="inputAllData">تأكد من أدخال جميع البيانات المطلوبة</string>
    <string name="internetError">لا يوجد اتصال بالأنترنت</string>
    <string name="errorLogin">خطأ في تسجيل الدخول</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectDep">القسم</string>
    <string name="searchTxt">أدخل اسم القسم</string>
    <string name="search">أبحث</string>
    <string name="SelectOne">أختر أحد الأقسام</string>
    <string name="noData">لا توجد بيانات</string>
    <string name="noDataInsert">يرجى كتابة محتوى التعليق اولاً</string>

    <string name="folname">ارسال استشارة</string>
    <string name="txt_departmenttype">نوع القسم</string>
    <string name="txt_typeofcons">نوع الاستشارة</string>
    <string name="txt_selectdepartment">أختر القسم</string>
    <string name="text_public">عامة</string>
    <string name="txt_Private">خاصة</string>
    <string name="Patient_Information">معلومات خاصة بالمريض</string>
    <string name="Patient_Name">اسم المريض</string>
    <string name="Patient_Age">العمر</string>
    <string name="Patient_Weight">الوزن</string>
    <string name="Sex">الجنس</string>
    <string name="txt_Male">ذكر</string>
    <string name="txt_Female">انثى</string>
    <string name="Write_Your_Consultation">أكتب استشاراتك</string>
    <string name="Write_Consultation">أكتب أستشاراتك ..</string>
    <string name="txt_Write_Other_Question">Write Other Question</string>
    <string name="txt_Writ_Other_Q">Write Other Q......</string>
    <string name="txt_Load_File">Load File if there is</string>
    <string name="txt_btn_Load_File">Load File</string>
    <string name="txt_send">SEND</string>
    <string name="txt_Dectortype">Dectors List Names</string>
    <string name="txt_selectdectors">أختر الدكتور</string>
    <string name="Request_a_consultation">Request a consultation</string>
    <string name="edit">Edit</string>
    <string name="Consultation_Fee">سعر الأستشارة :</string>
    <string name="show_comments">Show Comments</string>
    <string name="back">رجوع</string>
    <string name="Commnts">التعليقات</string>
    <string name="Evaluation">تقييم</string>
    <string name="Favorites">المفظلة</string>
    <string name="noComments">لا توجد تعليقات</string>
    <string name="sendCommentDone">تم الأرسال بنجاح</string>
    <string name="errorPickImage">خطأ في التقاط الصورة</string>
    <string name="updataDone">تم تعديل بنجاح</string>
    <string name="floatingActionBtn">أظف أستشارة</string>
    <string name="detiles">تفاصيل</string>
    <string name="login">تسجيل الدخول</string>
    <string name="ForgetPassword">هل نسيت كلمة السر ؟</string>
    <string name="MEDICAL_CONSULTATION">الأستشارات الطبية</string>
    <string name="UserNameorEmail">أسم المستخدم او البريد الإلكتروني</string>
    <string name="Password">كلمة السر</string>
    <string name="welcome">مرحباً ..</string>
    <string name="txt_departmen">التخصص :</string>
    <string name="balenc">الرصيد :</string>
    <string name="Description">نظرة عامة</string>
    <string name="Exparianes">الخبرات</string>
    <string name="profile">عرض الملف الشخصي</string>
    <string name="txt_sendCon">أرسال أستشارة</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="user_emil">البريد الألكتروني</string>
    <string name="user_phone">رقم الهاتف</string>
    <string name="user_location">مكان الأقامة</string>
    <string name="user_price">سعر الأستشارة</string>
    <string name="user_info">نظرة عامة</string>
    <string name="save">حفظ التغييرات</string>
    <string name="txt_all_doc">الأطباء</string>
    <string name="noLogin">لم تقم بتسجيل الدخول</string>
    <string name="txt_docdepartmen">الاقسام الطبية</string>
    <string name="txt_pub_cons">الاستشارات العامة</string>

    <string name="search_hint">مثال : محمد او 1000</string>
    <string name="illness">لديك امراض</string>
    <string name="send_cons">ارسال استشارة</string>
    <string name="doctor">الدكتور</string>
    <string name="selectDoc">أختر الدكتور</string>
    <string name="cons_type">نوع الأستشارة</string>
    <string name="allirgic">لديك حساسية</string>
    <string name="allergic_ex">ماهي الحساسية لديك</string>
    <string name="medicine_ex">تتناول ادوية</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="illness_ex">اسم المرض </string>
    <string name="Load_File">تحميل الملفات</string>
    <string name="send">أرسال</string>
    <string name="cons_title">عنوان الأستشارة</string>
    <string name="medicine_hint">اسم العلاج</string>
    <string name="getDep">القسم : s$</string>
    <string name="dont_have_account">إنشاء حساب جديد !</string>

</resources>
