<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="rtl"
    android:textDirection="rtl">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#fff"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="backClicked"
                    android:src="@drawable/ic_forward" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorwhite"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_person_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.9"
                    >

                    <EditText

                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:hint="@string/user_name"
                        android:paddingRight="15dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"

                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorwhite"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_mail" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.9">

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:hint="@string/user_emil"
                        android:paddingRight="15dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"

                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorwhite"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.9">

                    <EditText

                        android:id="@+id/edit_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:hint="@string/user_phone"
                        android:paddingRight="15dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"

                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorwhite"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_address" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.9">

                    <EditText

                        android:id="@+id/edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:hint="@string/user_location"
                        android:paddingRight="15dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorwhite"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_monetization_on_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.9">

                    <EditText
                        android:id="@+id/edit_consprice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:hint="@string/user_price"

                        android:paddingRight="15dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorwhite"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_info" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.9">

                    <EditText

                        android:id="@+id/edit_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:hint="@string/user_info"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        android:paddingRight="15dp"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_edit"
                style="@style/btnStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_save"
                android:text="@string/save"
                android:textColor="#fff" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/photo_female_6"
        app:civ_border="true"
        app:civ_border_width="2dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>